fixed top align of info sections

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -21,6 +21,7 @@ h3 {
     color: var(--color-text);
     font-weight: normal;
     padding: 0;
+    line-height: 1;
 }
 
 a {
