--- a/src/scss/_info-hero.scss
+++ b/src/scss/_info-hero.scss
@@ -54,6 +54,7 @@
 
             .contact-list {
                 grid-column: 8;
+                margin-top: -3px;
             }
 
             .close-tag {
